Nav bar fix
Fixed overlapping text on small screens by adding left margin to ul

--- a/stylesheet3.css
+++ b/stylesheet3.css
@@ -89,6 +89,7 @@ nav .navname {
 }
 nav ul {
 	text-align: right;
+	margin-left: 10%;
 }
 nav ul li {
 	display: inline;
